--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <input id="duration" value="30" />
     <button id="start">Start</button>
     <button id="pause">Pause</button>
-
+    ,
+    <script src="timer.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
