--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
     <title>Timer</title>
   </head>
   <body>
-    <input id="duration" value="30" />
-    <button id="start">Start</button>
-    <button id="pause">Pause</button>
-    ,
+    <div class="timer-container">
+      <div class="controls">
+        <input id="duration" value="10" />
+        <div class="control-play-stop">
+          <button id="start"><i class="fas fa-play"></i></button>
+          <button id="pause"><i class="fas fa-pause"></i></button>
+          <button id="reset"><i class="fas fa-redo"></i></button>
+        </div>
+      </div>
+      <svg height="400" , width="400">
+        <circle
+          r="190"
+          cx="200"
+          cy="200"
+          fill="transparent"
+          stroke="blue"
+          stroke-width="15"
+          transform="rotate(-90,200,200)"
+        />
+      </svg>
+    </div>
     <script src="timer.js"></script>
     <script src="app.js"></script>
   </body>
