--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -10,6 +11,7 @@
     <title>Timer</title>
   </head>
   <body>
+    <h1>timer</h1>
     <div class="timer-container">
       <div class="controls">
         <input id="duration" value="10" />
@@ -25,7 +27,7 @@
           cx="200"
           cy="200"
           fill="transparent"
-          stroke="blue"
+          stroke="#06bcc1"
           stroke-width="15"
           transform="rotate(-90,200,200)"
         />
