--- a/index.html
+++ b/index.html
@@ -15,31 +15,29 @@
       <section class="wrapper-timer">
         <h1>timer</h1>
         <div class="timer-container">
-          <div class="controls">
-            <input id="duration" value="10" />
-            <div class="control-play-stop">
-              <button id="start"><i class="fas fa-play"></i></button>
-              <button id="pause"><i class="fas fa-pause"></i></button>
-              <button id="reset"><i class="fas fa-redo"></i></button>
-            </div>
-          </div>
           <svg height="400" , width="400">
             <circle
               r="190"
               cx="200"
               cy="200"
               fill="transparent"
-              stroke="#06bcc1"
+              stroke="#b7c5d3"
               stroke-width="15"
               transform="rotate(-90,200,200)"
+              class="filter"
             />
           </svg>
+          <div class="controls">
+            <input id="duration" value="10" />
+          </div>
+        </div>
+        <div class="control-play-stop">
+          <button id="start"><i class="fas fa-play"></i></button>
+          <button id="pause"><i class="fas fa-pause"></i></button>
+          <button id="reset"><i class="fas fa-redo"></i></button>
         </div>
       </section>
     </main>
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-
     <script src="timer.js"></script>
     <script src="app.js"></script>
   </body>
